优化配置加载,和脚本启动