@@ -1,14 +1,11 @@
 #!/bin/bash
-
-#环境变量设置
-export otel.traces.exporter=none
-export otel.metrics.exporter=none
-
+#当前路径
+CURRENT_PATH=`pwd`
 # 定义Spring Boot应用的名称
 APP_NAME="fabric-0.0.1-SNAPSHOT"
 
 # 定义Spring Boot应用的JAR文件
-APP_JAR="$APP_NAME.jar"
+APP_JAR="$CURRENT_PATH/$APP_NAME.jar"
 
 # 定义Spring Boot应用的PID文件
 PID_FILE="application.pid"
@@ -17,13 +14,14 @@ PID_FILE="application.pid"
 MEM_OPTS="-Xms512m -Xmx1024m"
 
 # GC日志的输出路径和文件名
-GC_LOG_FILE=./gc.log
-GC_LOG_OPTS="-Xloggc:$GC_LOG_FILE -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=10 -XX:GCLogFileSize=100M"
+GC_LOG_FILE="$CURRENT_PATH/gc.log"
+GC_LOG_OPTS="-XX:+UseG1GC -XX:+PrintGCDetails -Xloggc:gc.log -Xlog:gc+heap=trace"
 
 # 定义启动Spring Boot应用的命令
 start() {
     echo "Starting $APP_NAME..."
-    nohup java $MEM_OPTS $GC_LOG_OPTS -jar $APP_JAR > /dev/null 2>&1 &
+    nohup java $MEM_OPTS $GC_LOG_OPTS -jar $APP_JAR -Dotel.traces.exporter=none -Dotel.metrics.exporter=none > /dev/null 2>&1 &
+    # nohup java $MEM_OPTS $GC_LOG_OPTS -jar $APP_JAR -Dotel.traces.exporter=none -Dotel.metrics.exporter=none  &
     echo $! > $PID_FILE
     echo "$APP_NAME started successfully."
 }
